[package]
name = "stealth-launch"
version = "0.1.0"
edition = "2021"
description = "CLI for private token creation on Solana using Token2022 confidential extensions"
license = "MIT"

[[bin]]
name = "stealth-launch"
path = "src/main.rs"

[dependencies]
solana-sdk = "3.0.0"
solana-client = "3.1.6"
solana-account-decoder = "3.0.0"
solana-zk-sdk = "5.0.0"
solana-commitment-config = "3.1.0"
solana-system-interface = "2.0.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.18.0"
spl-token-confidential-transfer-proof-generation = "0.5.1"
spl-token-confidential-transfer-proof-extraction = "0.5.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
